# RNN_for_Time-Series_NLP

./: NLP_LSTM.ipynb  README.md  Recurrent_neural_networks.ipynb  TimeSeries Prediction using RNNs.ipynb  Time_series_example_testing.py  pyproject.toml
.ipynb_checkpoints/: NLP_LSTM-checkpoint.ipynb
